--- a/cfgs/trainer_single_gpu.yaml
+++ b/cfgs/trainer_single_gpu.yaml
@@ -9,14 +9,14 @@ logger:
     # Determined via argument linking in train.py
     # save_dir: ${fit.trainer.default_root_dir}
     project: wildfire_progression
-    log_model: true
+    log_model: false
 callbacks: 
   - class_path: pytorch_lightning.callbacks.model_checkpoint.ModelCheckpoint
     init_args:
       monitor: val_loss
       mode: min
 fast_dev_run: false
-max_epochs: 500
+max_epochs: 50
 min_epochs: -1
 max_steps: -1
 min_steps: -1
